2025-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-barf-if-file-missing)
	(with-parsed-tramp-file-name, tramp-skeleton-file-truename):
	* tramp-archive.el (with-parsed-tramp-archive-file-name):
	* tramp-message.el (tramp-with-demoted-errors): Fix debug declatation.

	* tramp-sh.el (tramp-sh-gio-monitor-process-filter): Do not
	prepend remote prefix.

2025-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-get-file-name-with-method): New defun.
	(with-tramp-file-name-with-method, tramp-file-name-with-sudo): Use it.
	(tramp-dired-find-file-with-sudo): Fix docstring.

2025-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-directory-watched): New defun.
	(tramp-accept-process-output, tramp-wait-for-regexp):
	Improve debug message.

	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
	* tramp-sh.el (tramp-sh-gio-monitor-process-filter):
	Use connection property "file-monitor".

	* tramp-smb.el (tramp-smb-file-name-handler-alist):
	Use `tramp-smb-handle-file-notify-add-watch'.
	(tramp-smb-handle-delete-directory): Do not error if there is a
	pending deletion of a directory under file-watch.
	(tramp-smb-handle-file-notify-add-watch)
	(tramp-smb-notify-process-filter): New defuns.
	(tramp-smb-send-command): New optional argument NOOUTPUT.
	(tramp-smb-wait-for-output): Improve debug message.

2025-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0 released

2025-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-methods) <rsync>: Adapt `tramp-direct-async'
	argument.  (Bug#71050, Bug#71259)

2025-06-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-shell-file-name-all-completions)
	(tramp-bundle-read-file-names): Fix scripts.

2025-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-suspended-timers, without-remote-files):
	Fix debug spec.

	* tramp-archive.el (tramp-archive-autoload-file-name-regexp):
	Fix comment.
